# manipulation

./: .blerc  .gitignore  .gitmodules  Dockerfile  README.md  apt-dependencies.txt  docker-compose.yml  pip-dependencies.txt  setup_environment
gazebo_models/: downsample.py
gazebo_models/bin_tray/: model.config  model.sdf
gazebo_models/ycb/: rename.py
gazebo_models/ycb/001_chips_can/: chips_can.sdf
gazebo_models/ycb/002_master_chef_can/: master_chef_can.sdf
gazebo_models/ycb/003_cracker_box/: cracker_box.sdf
gazebo_models/ycb/004_sugar_box/: sugar_box.sdf
gazebo_models/ycb/005_tomato_soup_can/: tomato_soup_can.sdf
gazebo_models/ycb/006_mustard_bottle/: mustard_bottle.sdf
gazebo_models/ycb/007_tuna_fish_can/: tuna_fish_can.sdf
gazebo_models/ycb/008_pudding_box/: pudding_box.sdf
gazebo_models/ycb/009_gelatin_box/: gelatin_box.sdf
gazebo_models/ycb/010_potted_meat_can/: potted_meat_can.sdf
gazebo_models/ycb/011_banana/: banana.sdf
gazebo_models/ycb/012_strawberry/: strawberry.sdf
gazebo_models/ycb/013_apple/: apple.sdf
gazebo_models/ycb/014_lemon/: lemon.sdf
gazebo_models/ycb/015_peach/: peach.sdf
gazebo_models/ycb/016_pear/: pear.sdf
gazebo_models/ycb/017_orange/: orange.sdf
gazebo_models/ycb/018_plum/: plum.sdf
gazebo_models/ycb/019_pitcher_base/: pitcher_base.sdf
gazebo_models/ycb/021_bleach_cleanser/: bleach_cleanser.sdf
gazebo_models/ycb/022_windex_bottle/: windex_bottle.sdf
gazebo_models/ycb/023_wine_glass/: wine_glass.sdf
gazebo_models/ycb/024_bowl/: bowl.sdf
gazebo_models/ycb/025_mug/: mug.sdf
gazebo_models/ycb/026_sponge/: sponge.sdf
gazebo_models/ycb/028_skillet_lid/: skillet_lid.sdf
gazebo_models/ycb/029_plate/: plate.sdf
gazebo_models/ycb/030_fork/: fork.sdf
gazebo_models/ycb/031_spoon/: spoon.sdf
gazebo_models/ycb/032_knife/: knife.sdf
gazebo_models/ycb/033_spatula/: spatula.sdf
gazebo_models/ycb/035_power_drill/: power_drill.sdf
gazebo_models/ycb/036_wood_block/: wood_block.sdf
gazebo_models/ycb/037_scissors/: scissors.sdf
gazebo_models/ycb/038_padlock/: padlock.sdf
gazebo_models/ycb/040_large_marker/: large_marker.sdf
gazebo_models/ycb/041_small_marker/: small_marker.sdf
gazebo_models/ycb/042_adjustable_wrench/: adjustable_wrench.sdf
gazebo_models/ycb/043_phillips_screwdriver/: phillips_screwdriver.sdf
gazebo_models/ycb/044_flat_screwdriver/: flat_screwdriver.sdf
gazebo_models/ycb/048_hammer/: hammer.sdf
gazebo_models/ycb/049_small_clamp/: small_clamp.sdf
gazebo_models/ycb/050_medium_clamp/: medium_clamp.sdf
gazebo_models/ycb/051_large_clamp/: large_clamp.sdf
gazebo_models/ycb/052_extra_large_clamp/: extra_large_clamp.sdf
gazebo_models/ycb/053_mini_soccer_ball/: mini_soccer_ball.sdf
gazebo_models/ycb/054_softball/: softball.sdf
gazebo_models/ycb/055_baseball/: baseball.sdf
gazebo_models/ycb/056_tennis_ball/: tennis_ball.sdf
gazebo_models/ycb/057_racquetball/: racquetball.sdf
gazebo_models/ycb/058_golf_ball/: golf_ball.sdf
gazebo_models/ycb/059_chain/: chain.sdf
gazebo_models/ycb/061_foam_brick/: foam_brick.sdf
gazebo_models/ycb/062_dice/: dice.sdf
gazebo_models/ycb/063-a_marbles/: a_marbles.sdf
gazebo_models/ycb/063-b_marbles/: b_marbles.sdf
gazebo_models/ycb/065-a_cups/: a_cups.sdf
gazebo_models/ycb/065-b_cups/: b_cups.sdf
gazebo_models/ycb/065-c_cups/: c_cups.sdf
gazebo_models/ycb/065-d_cups/: d_cups.sdf
gazebo_models/ycb/065-e_cups/: e_cups.sdf
gazebo_models/ycb/065-f_cups/: f_cups.sdf
gazebo_models/ycb/065-g_cups/: g_cups.sdf
gazebo_models/ycb/065-h_cups/: h_cups.sdf
gazebo_models/ycb/065-i_cups/: i_cups.sdf
gazebo_models/ycb/065-j_cups/: j_cups.sdf
gazebo_models/ycb/070-a_colored_wood_blocks/: a_colored_wood_blocks.sdf
gazebo_models/ycb/070-b_colored_wood_blocks/: b_colored_wood_blocks.sdf
gazebo_models/ycb/071_nine_hole_peg_test/: nine_hole_peg_test.sdf
workspace/src/basic_pick_and_place_ur/: CMakeLists.txt  README.md  package.xml
workspace/src/basic_pick_and_place_ur/src/: differential_ik_optimization.cpp  quadratic_programming.cpp  robot_painter.cpp
workspace/src/bin_picking/: CMakeLists.txt  README.md  package.xml
workspace/src/bin_picking/config/: camera_bridge.yaml  ompl_planning_pipeline_config.yaml  sensors_3d.yaml
workspace/src/bin_picking/include/bin_picking/: find_grasp_pose.hpp  utils.hpp
workspace/src/bin_picking/launch/: bin_picking.launch.py  gazebo.launch.py  scattered_scene.launch.py  scattered_scene_with_ur.launch.py
workspace/src/bin_picking/src/: find_grasp_pose.cpp
workspace/src/bin_picking/worlds/: empty_bins.world
workspace/src/geometric_pose_estimation/: CMakeLists.txt  README.md  package.xml
workspace/src/geometric_pose_estimation/config/: camera_bridge.yaml
workspace/src/geometric_pose_estimation/include/geometric_pose_estimation/: icp_with_segmentation.hpp  utils.hpp
workspace/src/geometric_pose_estimation/launch/: gazebo_with_camera_and_icp.launch.py
workspace/src/geometric_pose_estimation/src/: icp_with_segmentation.cpp
workspace/src/geometric_pose_estimation/worlds/: camera_scene.world
workspace/src/manipulation_utils/: package.xml  setup.cfg  setup.py
workspace/src/manipulation_utils/manipulation_utils/: __init__.py  create_frame_marker.py
workspace/src/motion_planning/: CMakeLists.txt  README.md  package.xml
workspace/src/motion_planning/include/motion_planning/: 2d_optimization.hpp  crowded_scene.hpp
workspace/src/motion_planning/src/: 2d_optimization.cpp  rrt_with_optim.cpp
workspace/src/pendulum/: README.md  (+4 more)
workspace/src/planar_manipulator/: README.md  package.xml  planar_manipulator.urdf  setup.cfg  setup.py
workspace/src/planar_manipulator/planar_manipulator/: grasp_pose.py  jacobian_calculation.py  planar_manipulator.py  planar_manipulator_velocity_control.py
workspace/src/ur_with_2f_85_description/: CMakeLists.txt  package.xml
workspace/src/ur_with_2f_85_description/config/: ur_controllers.yaml
workspace/src/ur_with_2f_85_description/launch/: ur_sim_control.launch.py
workspace/src/ur_with_2f_85_description/urdf/: ur_with_2f_85.urdf.xacro
(+123 files in other folders)
