<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur_with_2f_85_description</name>
  <version>0.0.1</version>
  <description>Launch UR with 2F-85 gripper simulation</description>
  <author>Vince Reda</author>
  <maintainer email="redvinaa@gmail.com">Vince Reda</maintainer>
  <license>BSD 3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ur_simulation_gz</exec_depend>
  <exec_depend>robotiq_description</exec_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
